[tool.poetry]
name = "aula-8"
version = "0.1.0"
description = ""
authors = ["devmatheus0 <92046361+devmatheus0@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandera = "^0.20.4"
pandas = "^2.2.3"
fastparquet = "^2024.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
